lib/libui/bottom_pane/chat_composer/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_short_without_context.snap
---
source: bin/console/src/bottom_pane/chat_composer/chat_composer_tests.rs
expression: terminal.backend()
---
"                              "
"› Test                        "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"  tab to queue · Plan mode    "
